intrusion-prevention/privileged/test_pod_allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
  namespace: kube-system
spec:
  containers:
    - name: testi
      image: nginx
      securityContext:
        privileged: true
