intrusion-prevention/privileged/test_pod_deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
  namespace: opa-test
spec:
  containers:
    - name: testi
      image: nginx
      securityContext:
        privileged: true
