intrusion-prevention/privileged/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
    namespaces:
      - "opa-test"
      - "kube-system"
  parameters:
    exemptImages:
    - "safeimages.com/*"
